--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <p>this is new repo</p>
-<<<<<<< HEAD
 <p>hyyyyy(konnichiiwa)</p>
-=======
 <p>hyyyyy</p>
-<p>pagal aurat(aurat) (common sense)</p>
->>>>>>> main
+<p>pagal aurat(aurat) (common sense)(pagal aurat)</p>
+<h1>hyyjdfjdfdjkhfdhfieureghrshrughdydfhsrw</h1>
+
