--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <p>this is new repo</p>
 <p>hyyyyy(konnichiiwa)</p>
 <p>hyyyyy</p>
-<<<<<<< HEAD
 <p>pagal aurat(aurat) (common sense)</p>
 <h1>okkkkkkkkk</h1>
-=======
 <p>pagal aurat(aurat) (common sense)(pagal aurat)</p>
-<h1>hyyjdfjdfdjkhfdhfieureghrshrughdydfhsrw</h1>
+<h1>hyyjdfjdfdjkhfdhfieureghrshrughdydfhsrw(ram-ram)</h1>
 
->>>>>>> mamma
+
