--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <p>this is new repo</p>
 <p>hyyyyy(konnichiiwa)</p>
-<p>hyyyyy</p>
+<h1>please help me(cpode-00)</h1>
 
-<p>pagal aurat(aurat) (common sense)</p>
-<h1>okkkkkkkkk</h1>
-
-<p>pagal aurat(aurat) (common sense)(pagal aurat)</p>
-<<<<<<< HEAD
-<h1>hyyjdfjdfdjkhfdhfieureghrshrughdydfhsrw(ram-ram)(yooobaby)(okkkkk)</h1>
-=======
-<h1>hyyjdfjdfdjkhfdhfieureghrshrughdydfhsrw(jai jinendra)(button)</h1>
->>>>>>> mamma
 
 
